Pagina responsive xs terminada

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="vendors/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/seccion-one.css">
@@ -78,11 +79,112 @@
             </div>
         </div>
     </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <section class="section-three">
+                    <figure>
+                        <img src="assets/images/conduce.jpg" alt="conduce" class="img-responsive center-block">
+                    </figure>
+                    <div class="leads">
+                        <h3>Conduce cuando quieras</h3>
+                        <p>LabCar es una opción flexible para alcanzar tus metas finacieras</p>
+                        <button>Conviértete en conductor</button>
+                    </div>
+                </section>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <section class="section-four">
+                    <div class="form">
+                        <form>
+                            <h4>Tarifas</h4>
+                            <p>Consulta las tarifas de LabCar aqui</p>
+                            <div class="input">
+                                <img src="assets/images/shape.png" alt="">
+                                <input type="text" value="Ingrese su punto de partida">
+                            </div>
+                            <div class="input"> 
+                                <img src="assets/images/shape2.png" alt="">
+                                <input type="text" value="Ingrese su punto de partida">
+                            </div>
+                            <div>
+                                <button type="button" name="button" class="img-responsive center-block">¡TRAZAR RUTA!</button>
+                            </div>
+                        </form>
+                    </div>
+                    <div>
+                        <div class="map">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d64907243.69762619!2d-135.34903815763704!3d6.815532746575672!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2smx!4v1495556005735"></iframe>
+                        </div>
+                    </div>
+                </section>
+            </div>
+        </div>
+    </div>
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 footer-logo">
+                    <img src="assets/images/logoBlanco.png" alt="">
+                    <hr>
+                </div>
+                <div class="row ">
+                    <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
+                           <div class="social-footer">
+                            <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                            <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                               <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                            <a href="#"><i class="fa fa-apple" aria-hidden="true"></i></a>
+                            <a href="#"><i class="fa fa-play" aria-hidden="true"></i></a>
+                        </div>
+                    </div>
+                    <div class="container-list">
+                        <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3">
+                            <ul>
+                                <li><a href="#" class="list">Viaja</a></li>
+                                <li><a href="#" class="list">Conduce</a></li>
+                                <li><a href="#" class="list">Ciudades</a></li>
+                                <li><a href="#" class="list">entregas</a></li>
+                                <li><a href="#" class="list">Preguntas</a></li>
+                                <li><a href="#" class="list">¿Cómo funciona?</a></li>
+                                <li><a href="#" class="list">Países</a></li>
+                                <li><a href="#" class="list">Seguridad</a></li>
+                            </ul>
+                        </div>
+                        <div class="hidden-xs hidden-sm col-md-3 col-lg-3">
+                            <ul>
+                                <li><a href="#" class="list">Oportunidades</a></li>
+                                <li><a href="#" class="list">Nuestra Historia</a></li>
+                                <li><a href="#" class="list">API LabCar</a></li>
+                                <li><a href="#" class="list">Eventos</a></li>
+                                <li><a href="#" class="list">Desarrolladores</a></li>
+                                <li><a href="#" class="list">Servicio</a></li>
+                                <li><a href="#" class="list">Laboratoria</a></li>
+                                <li><a href="#" class="list">Coders</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3">
+                            <ul class="link-footer">
+                                <li><a href="#"><img src="assets/images/googleplay.png" alt="" class="img-responsive list"></a>
+                                </li>
+                                <li><a href="#"><img src="assets/images/appstore.png" alt="" class="img-responsive list"></a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                <div class="col-lg-12 text-center fin">
+                    <hr>
+                    <h5><i class="fa fa-copyright" aria-hidden="true"></i> 2017 LabCar Technologies Inc.</h5>
+                </div>
+            </div>
+        </div>
+    </footer>
     <script src="vendors/jquery/jquery-3.2.1.slim.min.js"></script>
     <script src="vendors/bootstrap/js/bootstrap.min.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
-
-
-
